updated swagger spec, some code cleaning and refactoring
